[gd_scene load_steps=8 format=1]

[ext_resource path="res://Scripts/enemy_controls.gd" type="Script" id=1]
[ext_resource path="res://Sprites/enemy01.png" type="Texture" id=2]
[ext_resource path="res://Sprites/enemy02.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16, 16 )

[sub_resource type="SpriteFrames" id=2]

animations = [ { "frames":[ ExtResource( 2 ), ExtResource( 3 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[sub_resource type="Animation" id=3]

resource/name = "defaultFly"
length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ 0, 1 ] }

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 18, 18 )

[node name="Enemy" type="KinematicBody2D" groups=[ "enemyObjects", "enemies" ]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

visibility/visible = false
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
flip_v = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "default"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/defaultFly = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "defaultFly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="Shield1" type="Particles2D" parent="."]

config/amount = 8
config/lifetime = 3.0
config/offset = Vector2( 0, -24 )
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 6.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 4.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 1, 0.333333, 1, 1 )

[node name="Shield2" type="Particles2D" parent="."]

config/amount = 8
config/lifetime = 3.0
config/offset = Vector2( 0, 24 )
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 6.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 4.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.333333, 1, 1, 1 )

[connection signal="body_exit" from="Area2D" to="." method="_on_Area2D_body_exit"]


